swagger changes and readme changes.
