# palindrome/dto.py
@@ -1,9 +1,3 @@
-# class Palindrome:
-#     def __init__(self, message_id:str,message:str, is_palindrome:bool):
-#         self.message_id=message_id
-#         self.message = message
-#         self.is_palindrome = is_palindrome
-
 from pydantic import BaseModel, Field
 
 class PalindromeCreateDTO(BaseModel):
